Username, nav optimization

--- a/about.html
+++ b/about.html
@@ -21,8 +21,20 @@
 
 	<nav class = "navbar nav-top container">
 		<div class = "navbar-header">
+
 			<img src = "assets/danish_flag.gif" class = "navbar-brand logo">
 			<a class = "navbar-brand" href="#">Danebook</a>
+
+
+				<form class = "navbar-form">
+	            <div class = "form-group" id = "top-contain">
+	              <input type = "text" placeholder = "Search for Users" class = "form-control" id = "top-search">
+
+	         </div>
+	           <a href = "#" class = "navbar-right">USERNAME</a>
+	         </form>
+
+
 		</div>
 
 	</nav>
