Cover and user image

--- a/about.html
+++ b/about.html
@@ -27,17 +27,33 @@
 
 
 				<form class = "navbar-form">
-	            <div class = "form-group" id = "top-contain">
-	              <input type = "text" placeholder = "Search for Users" class = "form-control" id = "top-search">
+		            <div class = "form-group" id = "top-contain">
+		              <input type = "text" placeholder = "Search for Users" class = "form-control" id = "top-search">
+		         	</div>
 
-	         </div>
-	           <a href = "#" class = "navbar-right">USERNAME</a>
+	           		<a href = "#" class = "navbar-right">USERNAME</a>
 	         </form>
 
-
 		</div>
-
 	</nav>
+
+	<div class = "container">
+		<div class = "row">
+			<div class = "col-1-sm">
+				<!-- Left Margin -->
+			</div>
+
+
+			<div class = "col-10-sm">
+				<!-- Main Content -->
+				<img src = "assets/hogwarts_small.jpg" id = "jumbotron-img" alt = "No Pic Loaded">
+				<img src = "assets/harry_potter_small.jpg" id = "user-img" alt = "No Pic Loaded">
+			</div>
+
+			<div class = "col-1-sm">
+				<!-- Right Margin -->
+			</div>
+	</div>
 
 </body>
 
