--- a/about.html
+++ b/about.html
@@ -39,20 +39,27 @@
 
 	<div class = "container">
 		<div class = "row">
-			<div class = "col-1-sm">
-				<!-- Left Margin -->
-			</div>
 
 
-			<div class = "col-10-sm">
+
+			<div class = "col-12-lg" id = "top-content">
 				<!-- Main Content -->
-				<img src = "assets/hogwarts_small.jpg" id = "jumbotron-img" alt = "No Pic Loaded">
-				<img src = "assets/harry_potter_small.jpg" id = "user-img" alt = "No Pic Loaded">
+				<div id = "pictures">
+					<img src = "assets/hogwarts_small.jpg" id = "jumbotron-img" alt = "No Pic Loaded">
+					<img src = "assets/harry_potter_small.jpg" id = "user-img" alt = "No Pic Loaded">
+					<a href = "#" id = "edit-profile">Edit Profile</a>
+				</div>
+				<div id = "content-nav">
+				<ul class = "nav nav-justified" id = "content-menu">
+					<li><a href = "#">Timeline</a></li>
+					<li class = "active"><a href = "#">About</a></li>
+					<li><a href = "#">Photos</a></li>					
+					<li><a href = "#">Friends</a></li>
+				</ul>
+				</div>
 			</div>
 
-			<div class = "col-1-sm">
-				<!-- Right Margin -->
-			</div>
+
 	</div>
 
 </body>
