Reconfigured, not mobile friendly

--- a/about.html
+++ b/about.html
@@ -37,30 +37,63 @@
 		</div>
 	</nav>
 
-	<div class = "container">
+
+	<div class = "container-fluid">
+		
+
 		<div class = "row">
-
-
-
-			<div class = "col-12-lg" id = "top-content">
+			<div class = "col-sm-8" id = "top-content">
 				<!-- Main Content -->
-				<div id = "pictures">
-					<img src = "assets/hogwarts_small.jpg" id = "jumbotron-img" alt = "No Pic Loaded">
-					<img src = "assets/harry_potter_small.jpg" id = "user-img" alt = "No Pic Loaded">
-					<a href = "#" id = "edit-profile">Edit Profile</a>
-				</div>
-				<div id = "content-nav">
+				<img src = "assets/hogwarts_small.jpg" id = "jumbotron-img" alt = "No Pic Loaded">
+			</div>
+		</div>
+<br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+		<div class = "row">
+			<div class = "col-sm-2">
+				<img src = "assets/harry_potter_small.jpg" id = "user-img" alt = "No Pic Loaded">
+			</div>
+			
+			<div class = "col-sm-8" id = "content-nav">
+				<br /><br /><br /><br /><br /><br /><br /><br /><br />
+
 				<ul class = "nav nav-justified" id = "content-menu">
 					<li><a href = "#">Timeline</a></li>
 					<li class = "active"><a href = "#">About</a></li>
 					<li><a href = "#">Photos</a></li>					
 					<li><a href = "#">Friends</a></li>
 				</ul>
+			</div>
+			<div class = "col-sm-2">
+				<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+				<a href = "#" id = "edit-profile">Edit Profile</a>
+
+			</div>
+		</div>
+
+<br />
+
+
+		<div class = "row">
+			<div class = "col-sm-1">
+			</div>
+			<div class = "col-sm-10" id = "main-header">
+				<div id = "about-heading">
+					<h2>About<h2> 
 				</div>
+			<div class = "col-sm-6">
+				<h3> Basic Information </h3>
+			</div>
+			<div class = "col-sm-6">
+				<h3> Words to Live By </h3>
 			</div>
 
+			</div>
+			<div class = "col-sm-1">
+			</div>
+		</div>
 
-	</div>
 
 </body>
 
