--- a/about.html
+++ b/about.html
@@ -82,12 +82,74 @@
 				<div id = "about-heading">
 					<h2>About<h2> 
 				</div>
-			<div class = "col-sm-6">
-				<h3> Basic Information </h3>
+
+
+				<div class = "col-sm-6">
+					<h3> Basic Information </h3>
+					<br />
+
+					<div class = "row">
+					<div class = "col-sm-3">
+						<p><b>Birthday:</b></p>
+						<br />
+						<p><b>College:</b></p>
+						<br />
+						<p><b>Hometown:</b></p>
+						<br />
+						<p><b>Currently Lives:</b></p>
+						<br />
+					</div>
+					<div class = "col-sm-6">
+						<p>July 31st, 1980</p>
+						<br />
+						<p>Hogwarts College</p>
+						<br />
+						<p>Godrick's Hollow, England</p>
+						<br />
+						<p>Godrick's Hollow, England</p>
+						<br />
+					</div>
+				</div>
+
+				<div class = "row">
+					<h3>Contact Information</h3>
+					<br />
+					<div class = "col-sm-3">
+						<p><b>Email:</b></p>
+						<br />
+						<p><b>Telephone:</b></p>
+						<br />
+
+					</div>
+					<div class = "col-sm-6">
+						<p>harry_potter@hogwarts.edu</p>
+						<br />
+						<p>555-123-4567</p>
+						<br />
+
+					</div>
+				</div>
 			</div>
-			<div class = "col-sm-6">
-				<h3> Words to Live By </h3>
-			</div>
+
+
+				<div class = "col-sm-6">
+					<h3> Words to Live By </h3>
+				</br>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut 
+				<br />
+
+				<h3>About Me</h3>
+				<br />
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
 
 			</div>
 			<div class = "col-sm-1">
