--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 					<br />
 
 					<div class = "row">
-					<div class = "col-sm-3">
+					<div class = "col-sm-4">
 						<p><b>Birthday:</b></p>
 						<br />
 						<p><b>College:</b></p>
@@ -114,7 +114,7 @@
 				<div class = "row">
 					<h3>Contact Information</h3>
 					<br />
-					<div class = "col-sm-3">
+					<div class = "col-sm-4">
 						<p><b>Email:</b></p>
 						<br />
 						<p><b>Telephone:</b></p>
@@ -155,7 +155,7 @@
 			<div class = "col-sm-1">
 			</div>
 		</div>
-
+</div>
 
 </body>
 
