--- a/about_edit.html
+++ b/about_edit.html
@@ -1,1 +1,156 @@
-<!-- Your markup here! -->
+<!DOCTYPE html>
+
+<html>
+
+<head>
+		<!-- Latest compiled and minified CSS -->
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity = "sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin = "anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity = "sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin = "anonymous"></script>
+
+	<!-- My CSS Overrides -->
+	<link rel = "stylesheet" href="style.css" type="text/css">
+
+</head>
+
+<body>
+
+	<nav class = "navbar nav-top container">
+		<div class = "navbar-header">
+
+			<img src = "assets/danish_flag.gif" class = "navbar-brand logo">
+			<a class = "navbar-brand" href="#">Danebook</a>
+
+
+				<form class = "navbar-form">
+		            <div class = "form-group" id = "top-contain">
+		              <input type = "text" placeholder = "Search for Users" class = "form-control" id = "top-search">
+		         	</div>
+
+	           		<a href = "#" class = "navbar-right">USERNAME</a>
+	         </form>
+
+		</div>
+	</nav>
+
+
+	<div class = "container-fluid">
+		
+
+		<div class = "row">
+			<div class = "col-sm-8" id = "top-content">
+				<!-- Main Content -->
+				<img src = "assets/hogwarts_small.jpg" id = "jumbotron-img" alt = "No Pic Loaded">
+			</div>
+		</div>
+<br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+		<div class = "row">
+			<div class = "col-sm-2">
+				<img src = "assets/harry_potter_small.jpg" id = "user-img" alt = "No Pic Loaded">
+			</div>
+			
+			<div class = "col-sm-8" id = "content-nav">
+				<br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+				<ul class = "nav nav-justified" id = "content-menu">
+					<li><a href = "#">Timeline</a></li>
+					<li class = "active"><a href = "#">About</a></li>
+					<li><a href = "#">Photos</a></li>					
+					<li><a href = "#">Friends</a></li>
+				</ul>
+			</div>
+			<div class = "col-sm-2">
+				<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+				<a href = "#" id = "edit-profile">Edit Profile</a>
+
+			</div>
+		</div>
+
+<br />
+
+
+		<div class = "row">
+			<div class = "col-sm-1">
+			</div>
+			<div class = "col-sm-10" id = "main-header">
+				<div id = "about-heading">
+					<h2>About<h2> 
+				</div>
+
+
+				<div class = "col-sm-6">
+					<h3> Basic Information </h3>
+					<br />
+
+					<div class = "row">
+					<div class = "col-sm-4" id = "about-form">
+						<p><b>Birthday:</b></p>
+						<br />
+						<p><b>College:</b></p>
+						<br />
+						<p><b>Hometown:</b></p>
+						<br />
+						<p><b>Currently Lives:</b></p>
+						<br />
+					</div>
+					<div class = "col-sm-6">
+							<p>July 31st, 1980</p>
+							<br />
+							<p><input type = "text" class = "form-control" value = "Hogwarts College"></p>
+							<br />
+							<p><input type = "text" class = "form-control" value = "Godrick's Hollow, England"></p>
+							<br />
+							<p><input type = "text" class = "form-control" value = "Godrick's Hollow, England"></p>
+							<br />
+					</div>
+				</div>
+
+				<div class = "row">
+					<h3>Contact Information</h3>
+					<br />
+					<div class = "col-sm-4" id = "about-form">
+						<p><b>Email:</b></p>
+						<br />
+						<p><b>Telephone:</b></p>
+						<br />
+
+					</div>
+					<div class = "col-sm-6">
+						<p><input type = "text" class = "form-control" value = "harry_potter@hogwarts.edu"></p>
+						<br />
+						<p><input type = "text" class = "form-control" value = "555-123-4567"></p>
+						<br />
+
+					</div>
+				</div>
+			</div>
+
+
+				<div class = "col-sm-6">
+					<h3> Words to Live By </h3>
+				</br>
+
+				<p><textarea rows = "2" cols = "70">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut</textarea> </p> 
+				<br />
+
+				<h3>About Me</h3>
+				<br />
+
+				<p><textarea rows = "6" cols = "70">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea></p>
+				</div>
+
+			</div>
+			<div class = "col-sm-1">
+			</div>
+		</div>
+</div>
+
+</body>
+
+</html>
