--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 	</nav>
 
 
-	<div class = "container-fluid">
+	<div class = "container">
 		
 
 		<div class = "row">
@@ -67,7 +67,7 @@
 			<div class = "col-sm-2">
 				<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-				<a href = "#" id = "edit-profile">Edit Profile</a>
+				<a href = "about_edit.html" id = "edit-profile">Edit Profile</a>
 
 			</div>
 		</div>
@@ -83,7 +83,7 @@
 					<h2>About<h2> 
 				</div>
 
-
+<div id = "main-content">
 				<div class = "col-sm-6">
 					<h3> Basic Information </h3>
 					<br />
@@ -112,7 +112,7 @@
 				</div>
 
 				<div class = "row">
-					<h3>Contact Information</h3>
+					<h3>&nbsp; Contact Information</h3>
 					<br />
 					<div class = "col-sm-4">
 						<p><b>Email:</b></p>
@@ -137,7 +137,7 @@
 				</br>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut 
+				tempor incididunt ut labore et dolore magna aliqua. Ut </p>
 				<br />
 
 				<h3>About Me</h3>
@@ -151,10 +151,11 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 
-			</div>
-			<div class = "col-sm-1">
-			</div>
+
+				<div class = "col-sm-1">
+				</div>
 		</div>
+
 </div>
 
 </body>
