--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,221 @@
-<!-- Your markup here! -->
+<!DOCTYPE html>
+
+<html>
+
+<head>
+		<!-- Latest compiled and minified CSS -->
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity = "sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin = "anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity = "sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin = "anonymous"></script>
+
+	<!-- My CSS Overrides -->
+	<link rel = "stylesheet" href="style.css" type="text/css">
+
+</head>
+
+<body>
+
+	<nav class = "navbar nav-top container">
+		<div class = "navbar-header">
+
+			<img src = "assets/danish_flag.gif" class = "navbar-brand logo">
+			<a class = "navbar-brand" href="#">Danebook</a>
+
+
+				<form class = "navbar-form">
+		            <div class = "form-group" id = "top-contain">
+		              <input type = "text" placeholder = "Search for Users" class = "form-control" id = "top-search">
+		         	</div>
+
+	           		<a href = "#" class = "navbar-right">USERNAME</a>
+	         </form>
+
+		</div>
+	</nav>
+
+
+	<div class = "container">
+		
+
+		<div class = "row">
+			<div class = "col-sm-8" id = "top-content">
+				<!-- Main Content -->
+				<img src = "assets/hogwarts_small.jpg" id = "jumbotron-img" alt = "No Pic Loaded">
+			</div>
+		</div>
+<br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+		<div class = "row">
+			<div class = "col-sm-2">
+				<img src = "assets/harry_potter_small.jpg" id = "user-img" alt = "No Pic Loaded">
+			</div>
+			
+			<div class = "col-sm-8" id = "content-nav">
+				<br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+				<ul class = "nav nav-justified" id = "content-menu">
+					<li><a href = "#">Timeline</a></li>
+					<li class = "active"><a href = "#">About</a></li>
+					<li><a href = "#">Photos</a></li>					
+					<li><a href = "#">Friends</a></li>
+				</ul>
+			</div>
+			<div class = "col-sm-2">
+				<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+				<a href = "about_edit.html" id = "edit-profile">Edit Profile</a>
+
+			</div>
+		</div>
+
+<br />
+
+
+		<div class = "row">
+			<div class = "col-sm-1">
+			</div>
+			<div class = "col-sm-10" id = "main-header">
+				<div id = "about-heading">
+					<h2>Friends<h2> 
+				</div>
+
+		<div id = "main-content">
+				<div class = "col-sm-6">
+
+
+					<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+
+
+					<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+
+
+					<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+
+
+					<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+				</div>
+
+
+
+				
+
+			<div class = "col-sm-6">
+										<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+
+
+					<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+
+
+					<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+
+
+					<div class = "row" id = "friend">
+						<div class = "col-sm-3">
+						<img src = "assets/user_silhouette_generic.gif" id = "friend-img">
+						</div>
+						<div class = "col-sm-5">
+							<br />
+							<a href = "#" id = "friend-name">Hermione Granger</a>
+							<p id = "friend-amount">462 Friends</p>
+						</div>
+						<div class = "col-sm-4">
+							<br />
+							<button class = "btn-primary">Unfriend Me</button>
+						</div>
+					</div>
+				</div>
