--- a/about_edit.html
+++ b/about_edit.html
@@ -38,7 +38,7 @@
 	</nav>
 
 
-	<div class = "container-fluid">
+	<div class = "container">
 		
 
 		<div class = "row">
@@ -67,7 +67,7 @@
 			<div class = "col-sm-2">
 				<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-				<a href = "#" id = "edit-profile">Edit Profile</a>
+
 
 			</div>
 		</div>
@@ -136,19 +136,18 @@
 					<h3> Words to Live By </h3>
 				</br>
 
-				<p><textarea rows = "2" cols = "70">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut</textarea> </p> 
+				<p><textarea rows = "2" cols = "50">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut</textarea> </p> 
 				<br />
 
 				<h3>About Me</h3>
 				<br />
 
-				<p><textarea rows = "6" cols = "70">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea></p>
+				<p><textarea rows = "6" cols = "50">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea></p>
 				</div>
 
-			</div>
-			<div class = "col-sm-1">
-			</div>
-		</div>
+				<div class = "col-sm-1">
+				</div>
+	
 </div>
 
 </body>
