--- a/friends.html
+++ b/friends.html
@@ -59,9 +59,9 @@
 
 				<ul class = "nav nav-justified" id = "content-menu">
 					<li><a href = "#">Timeline</a></li>
-					<li class = "active"><a href = "#">About</a></li>
+					<li><a href = "#">About</a></li>
 					<li><a href = "#">Photos</a></li>					
-					<li><a href = "#">Friends</a></li>
+					<li class = "active"><a href = "#">Friends</a></li>
 				</ul>
 			</div>
 			<div class = "col-sm-2">
